# edu-platform

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  init-db.sh  pyproject.toml
.cursor/rules/: backend-development.mdc  coding-standards.mdc  devops-docker.mdc  frontend-development.mdc  project-architecture.mdc  workflow-planning.mdc
services/auth_service/: Dockerfile  alembic.ini  pyproject.toml
services/auth_service/app/: config.py  db.py  dependencies.py  main.py  models.py  schemas.py  utils.py
services/auth_service/app/api/: auth_router.py
services/auth_service/app/migrations/: env.py
services/auth_service/app/migrations/versions/: 4b8034f1cc6e_.py
services/auth_service/app/services/: auth_service.py
services/nginx/: Dockerfile  nginx.conf
services/quiz_service/: Dockerfile  alembic.ini  pyproject.toml
services/quiz_service/app/: config.py  db.py  dependencies.py  main.py  models.py  schemas.py  utils.py
services/quiz_service/app/api/: leaderboard_router.py  quiz_router.py
services/quiz_service/app/migrations/: env.py
services/quiz_service/app/migrations/versions/: 75f9b966d729_.py
services/quiz_service/app/services/: gemini_service.py  leaderboard_service.py  quiz_service.py
services/results_service/: Dockerfile  alembic.ini  pyproject.toml
services/results_service/app/: config.py  db.py  dependencies.py  main.py  models.py  schemas.py
services/shared/: pyproject.toml
services/shared/edu_shared/: config.py  dependencies.py  security.py
web_app/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml
(+20 files in other folders)
